--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ services:
   server:
     container_name: server
     build: ./server
+    depends_on:
+      database:
+        condition: service_healthy
     ports:
-      - 0.0.0.0:8080:8080
+      - 8080:8080
 
   client:
     container_name: client
@@ -11,4 +14,17 @@ services:
     depends_on:
       - server
     ports:
-      - 0.0.0.0:4200:80
+      - 4200:80
+
+  database:
+    container_name: database
+    build: ./database
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping"]
+      interval: 5s
+      timeout: 10s
+      retries: 20
+    volumes:
+      - /database/data:/var/lib/redis
