--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
     container_name: server
     build: ./server
     depends_on:
-      - database
+      database:
+        condition: service_healthy
+
     ports:
       - 8080:8080
     develop:
