--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -14,6 +14,8 @@ FROM nginx:alpine
 
 COPY --from=build /usr/src/app/dist/app/browser /usr/share/nginx/html
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
